--- a/search.css
+++ b/search.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .searchfield{
@@ -21,10 +22,12 @@ border-radius: 16px;
     border:none;
     outline: none;
     color: #4b9595;
+    font-weight: 600;
 }
 
 #searchbox::placeholder{
     font-size: 18px;
+    font-weight: 500;
 }
 
 #searchbtn{
@@ -36,4 +39,6 @@ border-radius: 16px;
     outline: none;
     font-size: 18px;
     background-color: #4b9595;
+    color : #fff;
+    cursor: pointer;
 }
