--- a/search.css
+++ b/search.css
@@ -31,9 +31,10 @@ border-radius: 16px;
 }
 
 #searchbtn{
-    width: 72px;
+    position: absolute;
+    width: 80px;
     height: 40px;
-    border-radius: 16px;
+    border-radius: 14px;
     right: 0;
     border:none;
     outline: none;
